--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -14,3 +14,17 @@ a {
     color: inherit;
     text-decoration: none;
 }
+
+.flex-center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.flex-column {
+    flex-direction: column;
+}
+
+.gap-1 {
+    gap: 1rem;
+}
